--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
         <a href = "#main" class="skip-this">Skip to Main Content</a>
         <nav>
             <ul>
-                <li><a href = "home.html">home</a></li>
+                <li><a href = "index.html">home</a></li>
                 <li><a href = "projects.html"class="current-page">projects</a></li>
                 <li><a href = "interests.html">interests</a></li>
             </ul>
